--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,4 +1,22 @@
-<p>This is the about view.</p>
-<p>And I'm going to use this to try stuff out</p>
-
-
+<div class="portfolio-modal modal fade" id="portfolioModal-About" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-content">
+        <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+                <div class="rl">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <div class="modal-body">
+                        <h2>About {{greeting}} and {{}}!</h2>
+                        <hr class="star-primary">
+                        <img src="images/portfolio/safe.png" class="img-responsive img-centered" alt="">
+                        <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
