--- a/app/styles/custom.css
+++ b/app/styles/custom.css
@@ -4,6 +4,53 @@
 
 .result, .from {
     color: #fff;
-    background: #18BC9C;
+    background: #726A95;
+}
+header .intro-text .mission {
+  display: block;
+  font-size: 2em;
+  font-weight: 300;
 }
 
+@media (min-width: 768px) {
+
+  header .intro-text .mission {
+    display: block;
+    font-size:2.25em;
+  }
+}
+
+header, section.success {
+    background-color: #709FB0;
+}
+
+.btn-success, 
+.navbar-custom .navbar-toggle:focus, 
+.navbar-custom .navbar-toggle:hover {
+    background-color: #726A95;
+    border-color: #351F39;
+}
+
+.navbar-custom .navbar-nav li.active a, 
+.navbar-custom .navbar-nav li.active a:active,
+.navbar-custom .navbar-nav li.active a:focus, 
+.navbar-custom .navbar-nav li.active a:hover
+{
+    background-color: #726A95;
+    color: #fff
+}
+.navbar-custom .navbar-nav li a{
+    background-color: #2C3E50;
+    color: #fff
+}
+
+
+.navbar-custom .navbar-nav li a:hover{
+    color: #726A95;
+    background-color:#F4E8C1;
+}
+
+hr.star-light:after {
+  background-color: #709FB0;
+  color: white;
+}
