adding more content

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,16 +2,16 @@
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
             <div class="modal-body">
-                <h2>Other things TODO  {{container}}!</h2>
+                <h2>Deployment with Docker</h2>
                 <hr class="star-primary">
-                <ul class="item-details">
-                    <li>Microservices</li>
-                    <li>Event sourcing http://martinfowler.com/eaaDev/EventSourcing.html</li>
-                    <li>SOLID with examples</li>
-                    <li>service registry</li>
-                    <li>docker and automation</li>
-                    <li>managing infrastructure</li>
-                </ul>
+                <img src="images/portfolio/safe.png" class="img-responsive img-centered" alt="">
+                <p>This is an example of how to deploy different containers using docker-compose.</p>
+                <p>In fact. This website was deployed using it.</p>
+                <p>We have to contanerise all the applications we want. In this case a bunch of microservices, a front end website made in angular (Me!), a load balancer and even a mongoDB database</p>
+                <p>One that is done, we need link them all toguether using docker-compose file</p>
+                <p>Then we do a docker-compose up.... and we have them running.</p>
+                <p>Then we do a docker-compose stop .... and we have them stopped.</p>
+                <p>How fun! you can check the code in my github account (github.com/ernespn)</p>
             </div>
         </div>
     </div>
