--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <div class="col-lg-8 col-lg-offset-2">
+        <div class="col-lg-12">
             <div class="modal-body">
                 <h2>Deployment with Docker</h2>
                 <hr class="star-primary">
