--- a/app/views/todoexample.html
+++ b/app/views/todoexample.html
@@ -4,7 +4,7 @@
             <div class="modal-body">
                 <h2>Todo with MongoDB</h2>
                 <hr class="star-primary">
-                <img src="images/portfolio/safe.png" class="img-responsive img-centered" alt="">
+                <img src="images/portfolio/Todos.png" class="img-responsive img-centered" alt="">
                 <p>In this example we will be saving simple TODO task into MongoDB.</p>
                 <p>The backend is done in C# and Java spring. The contract is similar so they should be interchangeable or even load balanced.</p>
                 <p>The front end made in Angular will do a rest request to those services to get the information about the data stored.</p>
