--- a/app/styles/custom.css
+++ b/app/styles/custom.css
@@ -2,6 +2,10 @@
     padding:5px 10px; cursor: move;
 }
 
+.list-items {
+  width: 50%;
+}
+
 .result, .from {
     color: #fff;
     background: #726A95;
@@ -10,6 +14,7 @@ header .intro-text .mission {
   display: block;
   font-size: 2em;
   font-weight: 300;
+  margin-bottom: 5px;
 }
 
 @media (min-width: 768px) {
@@ -17,6 +22,7 @@ header .intro-text .mission {
   header .intro-text .mission {
     display: block;
     font-size:2.25em;
+    margin-bottom: 3px;
   }
 }
 
