--- a/app/styles/custom.css
+++ b/app/styles/custom.css
@@ -17,11 +17,24 @@ header .intro-text .mission {
   margin-bottom: 5px;
 }
 
+header .intro-text .skills {
+  display: block;
+  font-size: 1.25em;
+  font-weight: 150;
+  margin-bottom: 5px;
+}
+
 @media (min-width: 768px) {
 
   header .intro-text .mission {
     display: block;
     font-size:2.25em;
+    margin-bottom: 3px;
+  }
+
+  header .intro-text .skills {
+    display: block;
+    font-size:1.5em;
     margin-bottom: 3px;
   }
 }
