refactor controllers and images names, add better article for the deployment

--- a/app/styles/custom.css
+++ b/app/styles/custom.css
@@ -73,3 +73,9 @@ hr.star-light:after {
   background-color: #709FB0;
   color: white;
 }
+
+.vcenter {
+    display: inline-block;
+    vertical-align: middle;
+    float: none;
+}
