--- a/app/views/microservices.html
+++ b/app/views/microservices.html
@@ -45,7 +45,7 @@
             <p>In this example I have 5 services written in different technologies (Java, C#, F#, Javascript, Python). 
                 Each microservices has the same contract are all of them are under the same load balancer. </p>
             <p>The angular application is making a call to the loadbalancer, binding to the view and showing the result.</p>
-            <p>You can see that when a return is given, there is also a from field. That indicates where the response is coming back (c#, java, python, nodejs, f#.)</p>
+            <p>You can see that when a return is given, there is also a from field. That indicates where the response is coming from (c#, java, python, nodejs, f#.)</p>
         </div>
     </div>
      <div class="row">
@@ -63,7 +63,11 @@
         
     </div>
     <div class="row">
-        <div class="col-xs-3 col-xs-offset-3 bg-info" ng-model="result">Result : {{ result }}</div>
-        <div class="col-xs-3 bg-info" ng-model="from">From : {{ from }}</div>
+        <div class="col-xs-3 col-xs-offset-3 " ng-model="result">
+            <p class="result">Result : {{ result }}</p>
+        </div>
+        <div class="col-xs-3" ng-model="from">
+            <p class="from">From : {{ from }}</p>
+        </div>
     </div>
 </div>
