--- a/app/views/todoexample.html
+++ b/app/views/todoexample.html
@@ -1,39 +1,58 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
-            <div class="modal-body">
-                <h2>Todo with MongoDB</h2>
-                <hr class="star-primary">
-                <img src="images/portfolio/Todos.png" class="img-responsive img-centered" alt="">
-                <p>In this example we will be saving simple TODO task into MongoDB.</p>
-                <p>The backend is done in C# and Java spring. The contract is similar so they should be interchangeable or even load balanced.</p>
-                <p>The front end made in Angular will do a rest request to those services to get the information about the data stored.</p>
-                <!-- Todos input -->
-                <form role="form" ng-submit="addTodo()">
-                    <div class ="row">
-                        <div class="input-group">
-                            <input type="text" ng-model="todo" placeholder="What needs to be done?" class="form-control">
-                            <span class="input-group-btn">
-                                <input type="submit" class="btn btn-primary" value="Add">
-                            </span>
-                        </div>
-                    </div>
-                </form>
-                <!-- Todos list -->
-                <div ui-sortable ng-model="todos">
-                    <p class="input-group moveable" ng-repeat="todo in todos">
-                        <input type="text" ng-model="todo" class="form-control">
+            <h2>Todo with MongoDB</h2>
+            <hr class="star-primary">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-3 col-xs-offset-1">
+                <img src="images/portfolio/angular.png" class="img-responsive img-centered" alt="">
+        </div>
+        <div class="col-xs-2">
+                <img src="images/portfolio/csharp.png" class="img-responsive img-centered" alt="">
+        </div>
+        <div class="col-xs-2">
+                <img src="images/portfolio/nancy.png" class="img-responsive img-centered" alt="">
+        </div>
+        <div class="col-xs-2">
+                <img src="images/portfolio/java.png" class="img-responsive img-centered" alt="">
+        </div>
+
+    </div>
+    <div class="row">
+        <div class="col-xs-4 col-xs-offset-2">
+                <img src="images/portfolio/mongodb.png" class="img-responsive img-centered" alt="">
+        </div>
+        <div class="col-xs-4">
+                <img src="images/portfolio/spring.png" class="img-responsive img-centered" alt="">
+        </div>
+    </div>
+     <div class="row">
+        <div class="col-lg-12">       
+            
+            <p>In this example we will be saving simple TODO task into MongoDB.</p>
+            <p>The backend is done in C# and Java spring. The contract is similar so they should be interchangeable or even load balanced (like in this example).</p>
+            <p>The front end made in Angular will do a rest request to those services to get the information about the data stored.</p>
+            <!-- Todos input -->
+            <form role="form" ng-submit="addTodo()">
+                <div class ="row">
+                    <div class="input-group">
+                        <input type="text" ng-model="todo" placeholder="What needs to be done?" class="form-control">
                         <span class="input-group-btn">
-                            <button class="btn btn-danger" ng-click="removeTodo($index)" aria-label="Remove">X</button>
+                            <input type="submit" class="btn btn-primary" value="Add">
                         </span>
-                    </p>
+                    </div>
                 </div>
-                <h4>Let's play with it: </h4>
-                <p>There are 3 operations we are interested on; Get all the todos, add new todos and delete todos.</p>
-                <p>By default every operations we will bring the list of todos, so if nothings come up is because there is nothing in the database.</p>
-                <p>This is done with GET request.</p>
-                <p>To insert new todos we do a POST request.</p>
-                <p>To delete todos we do a DELETE request</p>
+            </form>
+            <!-- Todos list -->
+            <div ui-sortable ng-model="todos">
+                <p class="input-group moveable" ng-repeat="todo in todos">
+                    <input type="text" ng-model="todo.what" class="form-control">
+                    <span class="input-group-btn">
+                        <button class="btn btn-danger" ng-click="removeTodo(todo.id)" aria-label="Remove">X</button>
+                    </span>
+                </p>
             </div>
         </div>
     </div>
